Added back "bred_for" as data to fetch and display

--- a/templates/form_results.html
+++ b/templates/form_results.html
@@ -84,6 +84,7 @@
                 <p><b>Height: </b>{{ breed1_info.height }}</p>
                 <p><b>Life Span: </b>{{ breed1_info.lifespan }}</p>
                 <p><b>Origin: </b>{{ breed1_info.origin }}</p>
+                <p><b>Bred For: </b>{{ breed1_info.bred_for }}</p>
                 <p><b>Temperament: </b>{{ breed1_info.temperament }}</p><br>
             {% else %}
                 <p>No breed information found.</p>
@@ -100,6 +101,7 @@
                 <p><b>Height: </b>{{ breed2_info.height }}</p>
                 <p><b>Life Span: </b>{{ breed2_info.lifespan }}</p>
                 <p><b>Origin: </b>{{ breed2_info.origin }}</p>
+                <p><b>Bred For: </b>{{ breed2_info.bred_for }}</p>
                 <p><b>Temperament: </b>{{ breed2_info.temperament }}</p><br>
             {% else %}
                 <p>No breed information found.</p>
